idp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  idp-svc
  labels:
    app: idp
    service: idp
spec:
  selector:
    app:  idp
  ports:
  - name:  public
    port:  4433
    targetPort:  4433
  - name:  admin
    port:  4434
    targetPort:  4434
