idp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: idp-svc
          servicePort: public
    host: idp.rasouza.dev
  tls:
  - hosts:
    - idp.rasouza.dev
    secretName: cloudflare-tls
